...
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BugReportViewController">
            <connections>
                <outlet property="backgroundButton" destination="e1n-Fk-J6e" id="eti-D3-osK"/>
                <outlet property="bugDescriptionContainer" destination="M04-Ch-cFF" id="E7E-0k-dhp"/>
                <outlet property="bugReportDescriptionTextView" destination="ssD-te-07G" id="r4D-TY-eeM"/>
                <outlet property="cancelButton" destination="GP9-vI-fCd" id="EAP-ww-j9T"/>
                <outlet property="containerView" destination="7U4-br-xRl" id="kJI-mL-pkw"/>
                <outlet property="descriptionLabel" destination="Q2l-Yi-SlQ" id="VPO-0N-huQ"/>
                <outlet property="logsDescriptionLabel" destination="ggt-kq-Zy9" id="3Nl-m3-1EE"/>
                <outlet property="overlayView" destination="CXZ-fI-kPd" id="ZJb-0n-Tmf"/>
                <outlet property="scrollView" destination="4fS-3N-tbW" id="Dsn-gw-VuW"/>
                <outlet property="scrollViewBottomConstraint" destination="fnt-1e-ZW4" id="W1B-1m-h13"/>
                <outlet property="sendButton" destination="z8A-7B-jAi" id="VSX-a9-yfs"/>
                <outlet property="sendLogsButtonImage" destination="hcc-ve-8OC" id="GcJ-Dq-6pz"/>
                <outlet property="sendLogsContainer" destination="OVa-m0-Ygk" id="Il5-fW-fKU"/>
                <outlet property="sendLogsLabel" destination="ZcH-7V-sfZ" id="NMr-wH-57G"/>
                <outlet property="sendScreenshotButtonImage" destination="wmW-9T-6xp" id="Ilg-F0-ZlY"/>
                <outlet property="sendScreenshotContainer" destination="6VA-Ng-S8R" id="nev-73-rpf"/>
                <outlet property="sendScreenshotContainerHeightConstraint" destination="VeX-9J-Jqe" id="dSo-Tz-5Lr"/>
...
