...
// button names
"send" = "Send";
"copy_button_name" = "Copy";
"resend" = "Resend";
"redact" = "Remove";
"share" = "Share";
"delete" = "Delete";

// actions
"action_logout" = "Logout";
"create_room" = "Create Room";
"login" = "Login";
"create_account" = "Create Account";
...
